# GameEngine

./: CMakeLists.txt
assets/scripts/: Level0.lua  Level1.lua  Level2.lua  test.lua
libs/imgui/: CMakeLists.txt
src/: Game.cpp  Game.h  main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Component/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlledComponent.h  LabelTextComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidbodyComponent.h  ScriptComponent.h  SpriteComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/Event/: CollisionEvent.h  KeyPressedEvent.h
src/EventBus/: Event.h  EventBus.h
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.h  Logger_test.cpp
src/System/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileEmitterSystem.h  ProjectileLifecycleSystem.h  RenderColliderSystem.h  RenderGUISystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
